# binance_crawler

./: Cargo.toml  readme.md
src/: main.rs  schema.sql
