[package]
name = "binance_crawler"
version = "0.1.0"
authors = ["kotone-shiinoha <kotone.shiinoha@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# net
ureq = "1.4"

# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# db
rusqlite = { version = "0.24.0", features = ["bundled"] }
async-std = "1.4"

lazy_static = "1.4.0"